@@ -26,8 +26,6 @@
 #ifndef DUMUX_TWOCNIZEROEQTWOPTWOCNISPATIALPARAMS_HH
 #define DUMUX_TWOCNIZEROEQTWOPTWOCNISPATIALPARAMS_HH
 
-#include <dune/grid/io/file/vtk/common.hh>
-
 #include <dumux/material/spatialparams/implicitspatialparams.hh>
 #include <dumux/material/fluidmatrixinteractions/2p/linearmaterial.hh>
 #include <dumux/material/fluidmatrixinteractions/2p/regularizedvangenuchten.hh>
